Fix #12345 - [Feature] Accumulate all limiting ingredients across regulatory IDs